# pdpipe

./: .bandit  .codecov.yml  .coveragerc  .fdignore  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .ignore  .pre-commit-config.yaml  .pylintrc  .pyproject.toml  .readthedocs.mkdocs.yml  .readthedocs.yml  .shellcheckrc  .travis.yml  .travis.yml_big  .typos.toml  404.html  AGENTS.md  LICENSE  LOCAL_AGENTS.example.md  LOCAL_AGENTS.md  MANIFEST.in  Makefile  Pipfile  README.rst  index.html  mkdocs.yml  pyproject.toml  pytest.ini  pytest_osx.ini  robots.txt  setup.cfg  setup.py  sitemap.txt  sitemap.xml  tags  test_fix.py  tox.ini
.cursor/rules/: always.mdc  dev_test_and_build.mdc  python.mdc
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  deploy-gh-pages.sh  doc_builder.yml  issue_template.md  lint-markdown.sh
.github/ISSUE_TEMPLATE/: Bug_report.md
.github/workflows/: black.yml  checkdocs.yml  claude.yml  lint.yml  npdocval.yml  release.yml  safety.yml  test.yml
apidoc/: README.md  build_w_pipenv.sh
apidoc/pdpipe_template/: config.mako
dev/: download_nltk_punkt_tab.py
dev/scripts/: check_series_transform_discovery.py  numpydoc_validate.py  run_pytest.sh
doc/: README.md  build.sh  index.html  sidebar_header.html
doc/pdpipe/: basic_stages.html  col_generation.html  cond.html  core.html  cq.html  df.html  exceptions.html  index.html  nltk_stages.html  skintegrate.html  sklearn_stages.html  text_stages.html  types.html  util.html  wrappers.html
doc/pdpipe_template/: head.mako  logo.mako
docs/: Makefile  autogen.py  conf.py  extra.md  index.md  index.rst  make.bat  more.md
docs/develop/: adhoc.md  custom.md
docs/mkdocs/: requirements.txt
docs/mkdocs/css/: admonitions.css  termynal.css
docs/mkdocs/js/: termynal.js
docs/py/: basic.py
docs/reference/: basic.md  col_generation.md  cond.md  core.md  cq.md  fly.md  nltk.md  pdpipelinestage.md  runtime_parameters.md  skintegrate.md  sklearn.md  text.md  wrappers.md
docs/starting/: cond.md  cq.md  create.md  first_use.md  fly.md  install.md  pipelines.md  stages.md  types.md  wrappers.md
docs/tutorials/: basic.md  building_pipelines.md  custom_stages.md  half.md  index.md  runtime_parameters.md  skintegrate.md  standard_df.md
notebooks/: advanced_example.ipynb  base_example.ipynb  basic_example.ipynb  context_enrichment.ipynb  debug_germanlinarespardo2.ipynb  decompose.ipynb  erroes and messages.ipynb  limit_number_of_words.ipynb  list_pdpipe_members.ipynb  path_import_bug_reproduce.ipynb  pipeline_and_model.ipynb  pipeline_and_model_with_train_test.ipynb  pline.pkl  tokenization_and_sklearn.ipynb
notebooks/bug reproduction/: debug_germanlinarespardo.ipynb  debug_germanlinarespardo2.ipynb  path_import_bug_reproduce.ipynb
notebooks/bug_reproduction/: debug_germanlinarespardo.ipynb
olddocs/: conf.py  dummy_class_template_for_your_next_project.py  dummy_class_template_for_your_next_project.rst  index.rst
olddocs/_build/doctrees/: environment.pickle  index.doctree  (+1 more)
olddocs/_templates/: globaltoc.html
olddocs/api/: pdpipe.core.AdHocStage.rst  pdpipe.core.PdPipelineStage.rst
olddocs/graphite/: theme.conf
pandlines/: __init__.py  _version.py  core.py
pdpipe/: __init__.py  _version.py  basic_stages.py  cfg.py  col_generation.py  cond.py  core.py  cq.py  df.py  documentation.md  exceptions.py  fly.py  lbl.py  nltk_stages.py  pdp_types.py  polyglot_stages.py  rq.py  run_time_parameters.py  shared.py  skintegrate.py  sklearn_stages.py  stages_mapping.py  text_stages.py  types.py  util.py  wrappers.py
pdpipe/df/: __init__.py  bound_column_potential.py  df.py  df_transformer.py  func_lists.py  series_from_df.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
src/pdpipe/: __init__.py  _version.py  basic_stages.py  col_generation.py  cond.py  core.py  cq.py  exceptions.py  fly.py  lbl.py  nltk_stages.py  pdp_types.py  rq.py  run_time_parameters.py  shared.py  skintegrate.py  sklearn_stages.py  text_stages.py  util.py  wrappers.py
tests/: __init__.py  conftest.py  requirements.txt  test_basic_stages.py  test_issue_9.py  test_util.py
tests/basic_stages/: test_app_context_enricher.py  test_append_df.py  test_attribute_stages.py  test_bin.py  test_binarize.py  test_col_drop.py  test_col_dtype_enforcer.py  test_col_rename.py  test_col_reorder.py  test_colbyfunc.py  test_condition_validator.py  test_drop_duplicates.py  test_dropna.py  test_freq_drop.py  test_mapcolvals.py  test_merge_df.py  test_row_drop.py  test_schematize.py  test_set_index.py  test_val_drop.py  test_val_keep.py
tests/col_generation/: test_aggbycols.py  test_applybycols.py  test_applytorows.py  test_bin.py  test_binarize.py  test_colbyframefunc.py  test_diff.py  test_log.py  test_mapcolvals.py  test_onehotencode.py  test_transformbycols.py
tests/compound/: test_attribute_stages.py
tests/cond/: cond_example.md  custom_tests.py  test_cond.py  test_cond_example.py  test_cond_unit_tests.py
tests/core/: test_adhoc_stage.py  test_app_context.py  test_columns_based_pipeline_stage.py  test_extenders_of_columns_based_pipeline_stage.py  test_issue_70.py  test_pipeline.py  test_pipeline_stage.py
tests/cq/: test_cq_unit_tests.py
tests/df/: test_bound_col_poten.py  test_df.py
tests/fly/: test_fly.py
tests/helpers/: pdptestutil.py
tests/lbl/: test_drop_labels_by_values.py
tests/nltk_stages/: test_nltk.py  test_rare.py  test_snowball.py
tests/other/: sklearn_pipe.py
tests/performance/: test_issue_29.py
tests/rq/: test_rq_unit.py
tests/run_time_parameters/: test_contextuals.py  test_dynamics.py
tests/shared/: test_shared.py
tests/skintegrate/: test_pdpipeline_and_sklearn_estimator.py
tests/sklearn_stages/: test_decompose.py  test_encode.py  test_encode_label.py  test_imputer.py  test_scale.py  test_sklearn_transform.py  test_tfidf_vectorize_token_list.py
tests/text_stages/: test_drop_tokens_by_length.py  test_drop_tokens_by_list.py  test_regex_replace.py
tests/wrappers/: test_fitonly.py
tutorial/: index.html
(+27 files in other folders)
